# NeckarCut

./: CMakeLists.txt  LICENSE  README.md  docker_setup.sh  mySolution.cc  setup.sh
impl/: myForest.cc  myTree.cc  objectPool.cc
src/: global.hh  macros.hh  myArray.hh  myForest.hh  myQueue.hh  myTree.hh  objectPool.hh
